@@ -9,13 +9,15 @@ public class Dealer extends Player {
 
     Dealer(CardDeck deck) {
         super(deck);
-        hand.getLast().setHidden(true);
+//        hand.getLast().setHidden(true);
+        hand.get(hand.size() - 1).setHidden(true);
+
     }
 
     /**
      * Method that reveals dealer's hidden card.
      */
     void openCard() {
-        hand.getLast().setHidden(false);
+        hand.get(hand.size() - 1).setHidden(false);
     }
 }
